--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "private": false,
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/node": "^15.0.2",
     "tslint": "^6.1.3",
     "typescript": "^4.2.4"
   },
