--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "backend for npn.li",
   "main": "dist/app.js",
   "scripts": {
-    "start": "tsc && node dist/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc && node dist/npn.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node-dev --respawn --transpile-only src/npn.ts"
   },
   "repository": "https://github.com/sparremberger/npn.li-backend.git",
   "author": "Alan Sparremberger <alan.rs@outlook.com>",
@@ -15,7 +16,8 @@
     "@types/express": "^4.17.11",
     "@types/node": "^15.0.2",
     "tslint": "^6.1.3",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "ts-node-dev": "^1.1.6"
   },
   "dependencies": {
     "express": "^4.17.1"
