--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/node": "^15.0.2",
+    "@types/uuid": "^8.3.0",
+    "ts-node-dev": "^1.1.6",
     "tslint": "^6.1.3",
     "typescript": "^4.2.4",
-    "ts-node-dev": "^1.1.6"
+    "uuid": "^8.3.2"
   },
   "dependencies": {
+
+    "axios": "^0.21.1",
     "express": "^4.17.1"
   }
 }
