--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "private": false,
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/mongoose": "^5.10.5",
     "@types/node": "^15.0.2",
     "@types/uuid": "^8.3.0",
     "ts-node-dev": "^1.1.6",
@@ -22,6 +23,7 @@
     "uuid": "^8.3.2"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.12.10"
   }
 }
