--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "uuid": "^8.3.2"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "mongoose": "^5.12.10"
   }
