--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "private": false,
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.2",
     "@types/mongoose": "^5.10.5",
     "@types/node": "^15.0.2",
     "@types/uuid": "^8.3.0",
@@ -25,8 +26,9 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.0.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.10"
+    "mongoose": "^5.12.14"
   }
 }
