--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "GPL v3",
   "private": false,
   "devDependencies": {
+
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.2",
     "@types/mongoose": "^5.10.5",
@@ -29,6 +30,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.14"
+    "mongoose": "^5.12.14",
+    "types": "^0.1.1"
   }
 }
